--- a/popup.html
+++ b/popup.html
@@ -10,11 +10,11 @@
     <h3>ttDimmer</h3>
     <table class="table table-striped table-condensed" style="width: 200px;">
     	<tbody>
-    		<tr><td><input type="checkbox" id="top-panel" checked="checked"></td><td><label for="top-panel">Top panel</label></td></tr>
+    		<tr><td><input type="checkbox" id="header" checked="checked"></td><td><label for="header">Top panel</label></td></tr>
     		<tr><td><input type="checkbox" id="room" checked="checked"></td><td><label for="room">Avatars &amp; room</label></td></tr>
-    		<tr><td><input type="checkbox" id="playlist" checked="checked"></td><td><label for="playlist">Queue</label></td></tr>
-    		<tr><td><input type="checkbox" id="chat" checked="checked"></td><td><label for="chat">Chat</label></td></tr>
+    		<tr><td><input type="checkbox" id="sidebar" checked="checked"></td><td><label for="sidebar">Sidebar</label></td></tr>
     		<tr><td><input type="checkbox" id="pmWindows" checked="checked"></td><td><label for="pmWindows">PM Windows</label></td></tr>
+    		<tr><td><input type="checkbox" id="chatAvatars" checked="checked"></td><td><label for="chatAvatars">Chat avatars</label></td></tr>
     	</tbody>
     </table>
   </body>
